--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,20 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    env:
+      GOPATH: ${{ github.workspace }}
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: ./.github/workflows/build.sh
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          path: ./src/github.com/${{ github.repository }}
+      - name: Test
+        run: ./src/github.com/${{ github.repository }}/.github/workflows/build.sh
+
